Update: get my user profile
